<resources>
    <string name="app_name">預約味來</string>

    <string-array name="activity_levels">

        <item>輕度活動</item>
        <item>中度活動</item>
        <item>高度活動</item>
    </string-array>
    <string-array name="goals">
        <item>減重</item>
        <item>增重</item>
        <item>維持</item>
    </string-array>

    <string-array name="spinner">
        <item>學生</item>
        <item>老師</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_start">start</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">favorite</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_start_again">start_again</string>
    <string name="title_activity_candelete">candelete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="choose_restaurant_pinshan">
        <item>美琪晨餐館</item>
    </string-array>
    <string name="title_activity_new_start_stutent2">new_start_stutent2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="restaurant_image">餐廳圖片</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="login">login</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="click_here_to_register">click here to register</string>
    <string name="記住我">記住我</string>
    <string name="忘記密碼">忘記密碼</string>
    <string name="logout">logout</string>
    <!-- 添加 more_options 字符串資源 -->
    <string name="more_options">More options</string>
</resources>
